--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ body {
   background-color: var(--dark);
   -webkit-tap-highlight-color: transparent;
   overflow-x: hidden;
+}
+
+body.hide-scrolling {
   overflow-y: hidden;
 }
 
@@ -314,11 +317,51 @@ button {
   color: var(--white);
   cursor: auto;
 }
- 
+
+.filter-status {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--dark-light);
+  z-index: 201;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease 0.2s;
+}
+
+
+.filter-status.active {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+} 
+
+.filter-status p {
+  font-size: 20px;
+  text-transform: capitalize;
+  color: var(--white);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.filter-status.active p {
+  opacity: 1;
+}
+
+.filter-status p span {
+  font-weight: 600;
+}
+
 .portfolio-item {
   width: calc((100% / 3) - 30px);
   margin: 0 15px 30px;
   cursor: pointer;
+  display: none;
 } 
 
 .portfolio-item img {
@@ -331,11 +374,16 @@ button {
   text-transform: capitalize;
 }
 
+.portfolio-item.show {
+  display: block;
+}
+
 .portfolio-item-thumbnail {
   position: relative;
 }
 
-.portfolio-item-thumbnail::before, .portfolio-item-thumbnail::after {
+.portfolio-item-thumbnail::before, 
+.portfolio-item-thumbnail::after {
   content: '';
   position: absolute;
   left: 0;
@@ -387,15 +435,22 @@ button {
   height: 100%;
   width: 100%;
   z-index: 200;
+  visibility: hidden;
 }
 
-.portfolio-popup::before, .portfolio-popup::after {
+.portfolio-popup.open {
+  visibility: visible;
+}
+
+.portfolio-popup::before, 
+.portfolio-popup::after {
   content: '';
   position: absolute;
   height: 50%;
-  width: 100%;
+  width: 0%;
   background-color: var(--dark-light);
   z-index: -1;
+  transition: all 0.5s ease 0.5s;
 }
 
 .portfolio-popup::before {
@@ -408,9 +463,24 @@ button {
   bottom: 0;
 }
 
+.portfolio-popup.open::before, 
+.portfolio-popup.open::after {
+  width: 100%;
+  transition-delay: 0s;
+}
+
 .pp-inner {
   height: 100vh;
   padding: 0 15px;
+  opacity: 0;
+  transition: all 0.5s ease;
+  transform: translateY(20%);
+}
+
+.portfolio-popup.open .pp-inner {
+  opacity: 1;
+  transition-delay: 0.5s;
+  transform: translateY(0%);
   overflow-y: auto;
 }
 
